--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -51,48 +51,120 @@
     "accessories_section_title": "Аксессуары",
     "grilyato": {
       "title": "Потолки Грильято",
-      "description": "Современные, универсальные и простые в установке."
+      "description": "Потолок с прочной ячеистой структурой, собранный из П-образных профилей для формирования монолитного решетчатого пространства.",
+      "specs": {
+        "durability": "20 лет",
+        "profile_width": "10 мм",
+        "profile_height": "30-40 мм",
+        "profile_length": "2000 мм",
+        "cell_sizes": "75x75 мм, 100x100 мм, 150x150 мм, 200x200 мм"
+      }
     },
     "armstrong": {
       "title": "Потолки Армстронг",
-      "description": "Классические и надежные решения для любого помещения."
+      "description": "Классические и надежные решения для любого помещения.",
+      "specs": {
+        "durability": "15 лет",
+        "water_resistance": "Да",
+        "humidity_resistance": "Да"
+      }
     },
-    "reyechniy": {
+    "slatceiling": {
       "title": "Реечные потолки",
-      "description": "Изящные и линейные конструкции для современного вида."
+      "description": "Подвесной потолок, собранный из металлических и алюминиевых реек, закрепленных на траверсах.",
+      "specs": {
+        "durability": "15+ лет",
+        "material": "Металл и алюминий"
+      }
     },
-    "gypsum_armstrong": {
+    "gypsumarmstrong": {
       "title": "Гипсовый Армстронг",
-      "description": "Огнестойкие и звукопоглощающие гипсовые панели."
+      "description": "Огнестойкие и звукопоглощающие гипсовые панели.",
+      "specs": {
+        "size": "595 x 595 мм",
+        "thickness": "15 мм"
+      }
     },
-    "metal_armstrong": {
+    "metalarmstrong": {
       "title": "Металлический Армстронг",
-      "description": "Прочные и современные металлические потолочные системы."
+      "description": "Прочные и современные металлические потолочные системы.",
+      "specs": {
+        "size": "595 x 595 мм"
+      }
     },
-    "washing_armstrong": {
+    "washingarmstrong": {
       "title": "Моющийся Армстронг",
-      "description": "Легко чистящиеся и обслуживаемые потолочные решения."
+      "description": "Легко чистящиеся и обслуживаемые потолочные решения.",
+      "specs": {
+        "size": "595 x 595 мм",
+        "thickness": "6 мм",
+        "features": "Обои спереди и фольга сзади, что делает его устойчивым к жаре и холоду."
+      }
     },
-    "t_profil": {
+    "t-profil": {
       "title": "Т-Профиль",
-      "description": "Прочные и стабильные подвесные системы Т-образного профиля."
+      "description": "Прочные и стабильные подвесные системы Т-образного профиля.",
+      "specs": {
+        "length": "0.6 м",
+        "height": "24 мм",
+        "width": "24 мм",
+        "thickness": "0.25 мм"
+      }
     },
-    "l_profil": {
+    "l-profil": {
       "title": "L-Профиль",
-      "description": "Периметральная отделка для чистого завершения."
+      "description": "Периметральная отделка для чистого завершения.",
+      "specs": {
+        "length": "3 м",
+        "height": "22 мм",
+        "width": "20 мм",
+        "thickness": "0.25 мм"
+      }
     },
     "stringer": {
       "title": "Стрингер",
-      "description": "Опора для линейных потолочных систем."
+      "description": "Опора для линейных потолочных систем.",
+      "specs": {
+        "thickness": "0.6 мм"
+      }
     },
-    "honeycomb": {
-      "title": "Сотовые панели",
-      "description": "Легкие и эстетически приятные."
+    "hexagon-wall-decor": {
+      "title": "Шестигранный настенный декор",
+      "description": "Современный продукт, рекомендуемый для учебных заведений, IT-центров и офисных интерьеров.",
+      "specs": {
+        "application": "Учебные заведения, IT-центры, офисные интерьеры",
+        "colors": "Преимущественно черный и желтый"
+      }
     },
-    "aqua_panel": {
-      "title": "Аквапанели",
-      "description": "Влагостойкие панели для влажных помещений."
-    }
+    "suspension": {
+      "title": "Подвесная система",
+      "description": "Подвесная система для потолочных систем.",
+      "specs": {
+        "length": "25-50 м"
+      }
+    },
+    "specs_title": "Технические характеристики",
+    "spec_keys": {
+        "durability": "Долговечность",
+        "profile_width": "Ширина профиля",
+        "profile_height": "Высота профиля",
+        "profile_length": "Длина профиля",
+        "cell_sizes": "Размеры ячеек",
+        "water_resistance": "Водостойкость",
+        "humidity_resistance": "Влагостойкость",
+        "material": "Материал",
+        "size": "Размер",
+        "thickness": "Толщина",
+        "features": "Особенности",
+        "length": "Длина",
+        "height": "Высота",
+        "width": "Ширина",
+        "application": "Применение",
+        "colors": "Цвета"
+    },
+    "application_cases_title": "Сферы применения",
+    "video_installation_title": "Видео по установке",
+    "related_products_title": "Сопутствующие товары"
   },
   "accessories": {
     "title": "Аксессуары для установки",
@@ -213,6 +285,35 @@
     "q6": {
       "question": "Предлагаете ли вы индивидуальные дизайнерские решения?",
       "answer": "Да, мы специализируемся на индивидуальных дизайнерских решениях. Наша команда тесно сотрудничает с архитекторами и дизайнерами для создания уникальных потолочных систем, отвечающих конкретным потребностям проекта."
+    }
+  },
+  "architects": {
+    "page_title": "Для архитекторов",
+    "library_title": "Видео-библиотека",
+    "library_description": "Ознакомьтесь с нашей коллекцией видеоуроков и руководств по установке, которые помогут вам в ваших проектах.",
+    "video1": {
+      "title": "Монтаж потолка Грильято",
+      "description": "Пошаговое руководство по монтажу потолков Грильято."
+    },
+    "video2": {
+      "title": "Монтаж потолка Армстронг",
+      "description": "Узнайте, как быстро и эффективно монтировать потолки Армстронг."
+    },
+    "video3": {
+      "title": "Монтаж реечного потолка",
+      "description": "Подробное руководство по монтажу реечных потолков для современного вида."
+    },
+    "video4": {
+      "title": "Монтаж Т-профиля",
+      "description": "Узнайте, как монтировать Т-профили для прочной потолочной решетки."
+    },
+    "video5": {
+      "title": "Монтаж L-профиля",
+      "description": "Руководство по монтажу L-профилей для чистой отделки по периметру."
+    },
+    "video6": {
+      "title": "Монтаж подвесной системы",
+      "description": "Узнайте, как настроить подвесную систему для ваших потолков."
     }
   },
   "contact": {
