--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -7,7 +7,8 @@
     "about": "О компании",
     "contact": "Контакты",
     "language": "Язык",
-    "catalog": "Каталог"
+    "catalog": "Каталог",
+    "logo_alt": "Логотип Vero Ceilings"
   },
   "welcome": "Добро пожаловать в Vero Ceilings",
   "whyus": {
@@ -258,7 +259,8 @@
     "story_title": "Vero Ceilings: Поднимая пространства с десятилетием превосходства.",
     "story_text": "Vero Ceilings является одним из подразделений группы компаний «Vero Group», которая производит потолки, декор из МДФ, подвесные потолки ARMSTRONG, а также реализует свою продукцию в 14 регионах Узбекистана. Vero Ceilings не просто производит потолки; она создает архитектурные шедевры. Ассортимент продукции включает в себя инновационные акустические и эстетические потолочные конструкции, а также передовые решения для коммерческих и жилых помещений. Стремясь к совершенству, Vero Ceilings предоставляет не только визуально впечатляющие варианты, но и функциональные решения, гарантируя, что их потолки отвечают разнообразным потребностям современного строительства. Vero Ceilings предоставляет перечень оказываемых услуг: дизайн, замеры, монтаж, доставка. Основная цель Vero Ceilings – предоставить потребителям высококачественную, безопасную фирменную продукцию, изготовленную из лучшего сырья.",
     "vision_title": "Видение Vero Group: десятилетие успеха, будущее превосходства",
-    "vision_text": "После почти десятилетия роста Vero Group укрепила свои позиции на рынке, завоевав доверие благодаря высококачественной продукции. Признанная не только в Узбекистане, Vero Group выделяется быстрым развитием и соединением потребителей с современной жизнью. Vero Ceilings, подразделение Vero Group, производит исключительные потолки в четырех регионах Узбекистана, нанимая 1700 заводских рабочих. Предлагая преимущества для постоянных клиентов, компания предоставляет бесплатные услуги по замеру и доставку для заказов свыше 100 квадратных метров. За прошедшие годы Vero достигла вех, включая визит Президента Узбекистана Шавката Мирзиёева, который высоко оценил работу компании. Активно участвуя в международных выставках, таких как «Aquatherm Tashkent 2017» и «ShymkentBuild 2018», Vero получила сертификаты за свой выдающийся вклад в отрасль. Поскольку Vero Group смотрит в будущее, она по-прежнему привержена совершенству и стремится внести значительный вклад в мировую строительную отрасль."
+    "vision_text": "После почти десятилетия роста Vero Group укрепила свои позиции на рынке, завоевав доверие благодаря высококачественной продукции. Признанная не только в Узбекистане, Vero Group выделяется быстрым развитием и соединением потребителей с современной жизнью. Vero Ceilings, подразделение Vero Group, производит исключительные потолки в четырех регионах Узбекистана, нанимая 1700 заводских рабочих. Предлагая преимущества для постоянных клиентов, компания предоставляет бесплатные услуги по замеру и доставку для заказов свыше 100 квадратных метров. За прошедшие годы Vero достигла вех, включая визит Президента Узбекистана Шавката Мирзиёева, который высоко оценил работу компании. Активно участвуя в международных выставках, таких как «Aquatherm Tashkent 2017» и «ShymkentBuild 2018», Vero получила сертификаты за свой выдающийся вклад в отрасль. Поскольку Vero Group смотрит в будущее, она по-прежнему привержена совершенству и стремится внести значительный вклад в мировую строительную отрасль.",
+    "story_image_alt": "Изображение нашей истории"
   },
   "faq": {
     "title": "Часто задаваемые вопросы",
