--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -7,7 +7,8 @@
     "about": "Kompaniya haqida",
     "contact": "Bog'lanish",
     "language": "Til",
-    "catalog": "Katalog"
+    "catalog": "Katalog",
+    "logo_alt": "Vero Ceilings Logotipi"
   },
   "welcome": "Vero Ceilings ga xush kelibsiz",
   "whyus": {
